set03/problem01_compile_errors.txt
Compilation started at 10/30/2023, 11:38:28 PM
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:8:1: error: stray '`' in program
 ```
 ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:8:2: error: stray '`' in program
 ```
  ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:8:3: error: stray '`' in program
 ```
   ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c: In function 'input':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:15:22: error: expected ')' before 'y2'
     scanf("%f,%f",x2 y2);
                      ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c: In function 'find_distance':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:21:26: error: invalid operands to binary ^ (have 'float' and 'float')
   distance=sqrt((x2 - x1)^2 + (y2 - y1)^2);
                 ~~~~~~~~~^~~~~~~~~~~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c: In function 'output':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:26:58: error: expected ')' before 'x1'
   printf("The distance between (%f,%f)and (%f,%f)is %f\n"x1,y1,x2,y2,distance);
                                                          ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c: In function 'main':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:9: warning: passing argument 1 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
         ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:12: warning: passing argument 2 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
            ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:15: warning: passing argument 3 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
               ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:18: warning: passing argument 4 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
                  ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
Compilation finished at 10/30/2023, 11:38:28 PM
Compilation started at 10/30/2023, 11:40:32 PM
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:8:1: error: stray '`' in program
 ```
 ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:8:2: error: stray '`' in program
 ```
  ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:8:3: error: stray '`' in program
 ```
   ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c: In function 'find_distance':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:21:26: error: invalid operands to binary ^ (have 'float' and 'float')
   distance=sqrt((x2 - x1)^2 + (y2 - y1)^2);
                 ~~~~~~~~~^~~~~~~~~~~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c: In function 'output':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:26:71: error: 'distance' undeclared (first use in this function)
   printf("The distance between (%f,%f)and (%f,%f)is %f\n",x1,y1,x2,y2,distance);
                                                                       ^~~~~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:26:71: note: each undeclared identifier is reported only once for each function it appears in
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c: In function 'main':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:9: warning: passing argument 1 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
         ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:12: warning: passing argument 2 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
            ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:15: warning: passing argument 3 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
               ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:30:18: warning: passing argument 4 of 'input' makes pointer from integer without a cast [-Wint-conversion]
   input(x1,y1,x2,y2);
                  ^~
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set03\problem01.c:11:6: note: expected 'float *' but argument is of type 'int'
 void input(float *x1, float *y1, float *x2, float *y2){
      ^~~~~
Compilation finished at 10/30/2023, 11:40:32 PM
Compilation started at 10/31/2023, 12:01:16 AM
Compilation finished at 10/31/2023, 12:01:17 AM
